--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.13.0",
     "jade": "^1.11.0",
     "morgan": "^1.6.1",
-    "node-sass-middleware": "^0.9.7"
+    "node-sass-middleware": "^0.9.7",
+    "stylus": "^0.53.0"
   }
 }
