--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jade": "^1.11.0",
     "morgan": "^1.6.1",
     "node-sass-middleware": "^0.9.7",
+    "nodemailer": "^2.1.0",
     "stylus": "^0.53.0"
   }
 }
