--- a/v2/bower.json
+++ b/v2/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "masonry": "^4.0.0",
-    "imagesloaded": "^4.1.0"
+    "imagesloaded": "^4.1.0",
+    "bootstrap-validator": "^0.9.0"
   }
 }
