--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "front-matter": "^2.0.6",
     "jade": "~1.11.0",
+    "marked": "^0.3.5",
+    "moment": "^2.11.2",
     "morgan": "~1.6.1",
     "nodemailer": "^2.2.1",
     "serve-favicon": "~2.3.0"
