--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "masonry": "^4.0.0",
-    "df-visible": "jquery-visible#^1.2.0"
+    "df-visible": "jquery-visible#^1.2.0",
+    "bootstrap-social": "^4.12.0",
+    "font-awesome": "fontawesome#^4.5.0"
   }
 }
