v4 with google tag manager and much better mobile view

--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "masonry": "^4.0.0",
     "df-visible": "jquery-visible#^1.2.0",
     "bootstrap-social": "^4.12.0",
-    "font-awesome": "fontawesome#^4.5.0"
+    "font-awesome": "fontawesome#^4.5.0",
+    "highlightjs": "^9.1.0"
   }
 }
